Initial support for shared code classes across components in a root.
Add SharedCodeContext and SharedCodeProperty.
Add SharedCodeService, with default service implementation.
Add shared-code property to root:data for testing.